--- a/Where Am I/Info.plist
+++ b/Where Am I/Info.plist
@@ -26,6 +26,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUserUseageDescription</key>
+	<string>We need to know where you are.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We always need to know where you are.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
